--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@firebasegen/default-connector": "file:dataconnect-generated/js/default-connector",
     "@radix-ui/react-slot": "^1.1.1",
     "@types/react-router-dom": "^5.3.3",
     "aos": "^2.3.4",
