--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
     "aos": "^2.3.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel": "8.5.1",
+    "embla-carousel-autoplay": "8.5.1",
+    "embla-carousel-react": "8.5.1",
     "lucide-react": "^0.469.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-feather": "^2.0.10",
     "react-icons": "^5.4.0",
     "react-router-dom": "^6.27.0",
     "tailwind-merge": "^2.6.0",
